feat: mcp fs operate
